[project]
name = "qanatix"
version = "0.1.0"
description = "Python SDK for the Qanatix API — ingest, search, and manage structured data for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Qanatix", email = "support@qanatix.com" }]
keywords = ["qanatix", "mcp", "ai", "data", "search", "ingestion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]

[project.urls]
Homepage = "https://qanatix.com"
Documentation = "https://qanatix.dev/docs/getting-started/python-sdk"
Repository = "https://github.com/qanatix/qanatix-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qanatix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
